# ege-chinese-speaking-trainer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SECURITY.md  about.css  about.html  alembic.ini  app.js  asgi.py  compose.scale.yml  compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  reference.css  reference.html  requirements-dev.txt  requirements.txt  server.py  styles.css  variant-editor.css  variant-editor.html  variants.css  variants.html
api/: __init__.py  controller.py  errors.py  http.py  runtime.py  schemas.py
backend/: __init__.py  accounts.py  database.py  exports.py  grading.py  mailer.py  materials.py  migrations.py  observability.py  postgres.py  queries.py  security.py  submissions.py  transcription.py
deploy/: Caddyfile  nginx.conf
docs/: README.md  architecture.md
js/: account-assignments-controller.js  account-auth-controller.js  account-controller.js  account-groups-controller.js  account-reviews-controller.js  account-security-controller.js  account-security.js  account-view.js  api.js  material-editor.js  progress.js  reference-page.js  review.js  runner-controller.js  site-shell.js  task-view.js  variant-catalog.js  variants-page.js
legacy/: README.md  __init__.py  server.py
migrations/: env.py
schemas/: reference-library.schema.json  variant.schema.json
scripts/: backup.py  check_json.py  check_repository_hygiene.py  postgres_restore_smoke.py  postgres_smoke.py  (+4 more)
(+170 files in other folders)
