[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ege-chinese-speaking-trainer"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["var", ".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.coverage.run]
branch = true
source = ["server", "trainer"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
